option java_package = "appdynamics.pb";
package appdynamics.pb.Agent;

import "DTOProtocolBuffers.proto";
import "Common.proto";
import "Instrumentation.proto";
import "TransactionMatchPointConfig.proto";
import "EPType.proto";

message AgentConfigRequest {
    optional int64 nodeId = 1;
    optional int64 applicationId = 2;
    optional string accountKey = 3;
    optional int64 ipConfingurationTimestamp = 4;
    optional .com.singularity.ee.dto.pb.AppAgentExitCallInfo exitCallInfoRequest = 5;
    optional int64 transactionConfigTimestamp = 6;

    optional string uniqueHostInformation = 7;
    optional string installDir = 8;
    optional string jvmInfo = 9;
    repeated Common.NameValuePair machineInfo = 10;
    optional string applicationName = 11;
    optional string componentName = 12;
    optional string componentNodeName = 13;
    optional string agentType = 14;
    optional bool forceAgentRegistrationConfig = 15;
    optional string agentVersion = 16;
    optional string serverVersion = 17;
    optional int64 btSLAConfigTimestamp = 18;
    optional int64 btSLAConfigNonOriginatingTimestamp = 19;
    optional int64 datagatherConfigTimestamp = 20;
    optional int64 infoPointConfigTimestamp = 21;
    optional int32 numberOfLicenseUnits = 22;
    optional int64 customExitPointTimestamp = 23;
    // optional int64 cacheConfigurationTimestamp = 24;
    optional int64 memoryConfigurationTimestamp = 25;
    // optional int64 applicationDiagnosticDataInfoTimestamp = 26;
    repeated Common.NameValuePair appAgentOperationStatus = 27;
    repeated string vmStartupOptions = 28;
    repeated Common.NameValuePair systemProperties = 29;
    repeated Common.NameValuePair environmentVariables = 30;
    optional string processId = 31;
    repeated string ipAddresses = 32;
    optional bool supportsDevMode = 33;
    repeated Common.NameValuePair nodeMetaData = 34;
    optional string nodeUniqueId = 35;
    optional bool reuseNodeName = 36;
    optional string nodeNamePrefix = 37;
    optional int64 accountProfileTimestamp = 38;
    optional string machineId = 39;
    optional .com.singularity.ee.dto.pb.ReregisterNodeTicket reregisterNodeTicket = 40;
    optional bool initialRegistrationAttempt = 41;
    optional int64 btConfigTimestamp = 42;
    optional int64 applicationConfigTimestamp = 43;
    optional bool reportingStopped = 44;
    optional bool fullConfigRequested = 45;
    optional int64 nodePropertiesTimestamp = 46;
    optional int64 backgroundTransactionsTimestamp = 47;
    optional int64 processSnapshotsRequestsTimestamp = 48;
    optional int64 analyticsEnabledTransactionsTimestamp = 49;
    optional int64 transactionsTimestamp = 50;
    optional int64 analyticsDataGatherersTimestamp = 51;
}

message InformationPointDefinition
{
    required int64 id = 1;
    required Instrumentation.InformationPoint infoPoint = 2;
}

message InformationPointDefinitions
{
    required int64 timestamp = 1;
    repeated InformationPointDefinition definitions = 2;
}

message DiagnosticSession
{
    required int64 btId = 1;
    required string sessionGUID = 2;
    required int32 count = 3;
}

message ResolvedBackendInfo
{
    required int64 backendId = 1;
    required .com.singularity.ee.dto.pb.NodeResolutionInfo nodeResolutionInfo = 2;
}


message TransactionMatchPointConfigurations
{
    message ExcludedBT
    {
        required Agent.EntryPointType entryPointType = 1;
        required string name = 2;
    }

    required int64 timestamp = 1;
    repeated MatchPointConfig configurations = 2;
    repeated ExcludedBT excludedTransactions = 3;
}

message BTConfigurations {
    required int64 timestamp = 1;
    repeated .com.singularity.ee.dto.pb.BTConfiguration configurations = 2;
}

message ProcessSnapshotRequest {
    required int64 id = 1;
    required int64 nodeId = 2;
    required int32 captureTimeInSeconds = 3;
    required int64 timestamp = 4;
}


message AgentConfigResponse {
    optional .com.singularity.ee.dto.pb.MachinesIPPortConfig ipConfig = 1;
    optional .com.singularity.ee.dto.pb.AppAgentExitCallInfo exitCallInfoReponse = 2;
    optional Agent.TransactionMatchPointConfigurations matchPointConfigurations = 3;
    repeated int64 btIDsForOnDemandSnapshotCollection = 4;
    optional int64 machineId = 5;
    optional int64 componentId = 6;
    optional int64 componentNodeId = 7;
    optional int64 applicationId = 8;
    optional bool appAgentInit = 9;
    optional bool reRegisterAppAgent = 10;
    optional BTConfigurations btConfigurations = 11;
    optional BTConfigurations nonOriginatingBTConfigurations = 12;
    // TODO optional CallGraphConfig callgraphConfig = 13;
    optional int64 appConfigTimestamp = 14;
    optional int32 slaQuietTimeMinutes = 15;
    // TODO optional ErrorConfig errorConfig = 16;
    optional .com.singularity.ee.dto.pb.StallConfiguration stallConfiguration = 17;
    optional string instrumentationLevel = 18;
    optional .com.singularity.ee.dto.pb.ProtocolBufferDataGathererConfigs dataGatherers = 19;
    optional InformationPointDefinitions informationPoints = 20;
    optional .com.singularity.ee.dto.pb.CustomExitPointDefinitons customExitPointDefinitions = 21;
    optional .com.singularity.ee.dto.pb.MemoryConfigurationInfo memoryConfiguration = 22;
    // TODO ApplicationDiagnosticDataInfo applicationDiagnosticDataInfoTimestamp = 23;
    optional .com.singularity.ee.dto.pb.AppAgentOperationInfo appAgentOperationInfo = 24;
    optional int64 backgroundTransactionsTimestamp = 25;
    repeated int64 backgroundTransactions = 26;
    repeated .com.singularity.ee.dto.pb.BusinessTransaction businessTransactions = 27;
    repeated DiagnosticSession diagnosicSessions = 28;
    repeated ResolvedBackendInfo resolvedBackends = 29;
    repeated int64 deletedBTs = 30;
    repeated int64 deletedBackends = 31;
    // repeated int64 deletedJMXRules = 32;
    optional string serverId = 33;
    optional string vendorId = 34;
    optional string accountEdition = 35;
    optional string controllerVersion = 36;
    optional string controllerProfile = 37;
    optional .com.singularity.ee.dto.pb.EUMConfiguration eumConfiguration = 38;
    optional .com.singularity.ee.dto.pb.AccountProfile accountProfile = 39;
    optional bool stopReporter = 40;
    optional int32 maxMetricNameLength = 41;
    repeated ProcessSnapshotRequest processSnapshotRequests = 42;
    optional string accountGUID = 43;
    optional string controllerGUID = 44;
    optional string statusMessage = 45;
    optional bool initialRegistrationAttempt = 46;
    optional .com.singularity.ee.dto.pb.NodeProperties nodeProperties = 47;
    optional string accountKey = 48;
    optional int64 transactionsTimestamp = 49;
    optional int32 maxDiscoveredTransactionsLimit = 50;
    optional int64 analyticsEnabledTransactionsTimestamp = 51;
    repeated int64 analyticsEnabledTransactions = 52;
    optional bool crossAppCorrelationEnabled = 53;
    optional .com.singularity.ee.dto.pb.ProtocolBufferDataGathererConfigs analyticsDataGatherers = 54;
    optional bool agentDisabled = 55;
}
